deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      containers:
      - name: sample-api
        image: gcr.io/google-samples/kubernetes-bootcamp:v1
        ports:
        - containerPort: 8080
