service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-service
spec:
  selector:
    app: sample-api
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
